pkg/internal/expression/evaluator/y.output

state 0
	$accept: .start $end 

	ID  shift 7
	NUMBER  shift 8
	STRING  shift 9
	OPEN  shift 10
	.  error

	start  goto 1
	expression  goto 2
	or_expression  goto 3
	and_expression  goto 4
	comparison_expression  goto 5
	value_expression  goto 6

state 1
	$accept:  start.$end 

	$end  accept
	.  error


state 2
	start:  expression.    (1)

	.  reduce 1 (src line 25)


state 3
	expression:  or_expression.    (4)
	or_expression:  or_expression.OR and_expression 

	OR  shift 11
	.  reduce 4 (src line 33)


state 4
	or_expression:  and_expression.    (6)
	and_expression:  and_expression.AND comparison_expression 

	AND  shift 12
	.  reduce 6 (src line 37)


state 5
	and_expression:  comparison_expression.    (8)
	comparison_expression:  comparison_expression.NOT_EQUAL value_expression 
	comparison_expression:  comparison_expression.EQUAL value_expression 

	EQUAL  shift 14
	NOT_EQUAL  shift 13
	.  reduce 8 (src line 41)


state 6
	comparison_expression:  value_expression.    (11)
	value_expression:  value_expression.DOT ID 

	DOT  shift 15
	.  reduce 11 (src line 46)


state 7
	value_expression:  ID.    (12)
	value_expression:  ID.OPEN expression_list CLOSE 
	value_expression:  ID.OPEN CLOSE 

	OPEN  shift 16
	.  reduce 12 (src line 48)


state 8
	value_expression:  NUMBER.    (13)

	.  reduce 13 (src line 50)


state 9
	value_expression:  STRING.    (14)

	.  reduce 14 (src line 51)


state 10
	value_expression:  OPEN.expression CLOSE 

	ID  shift 7
	NUMBER  shift 8
	STRING  shift 9
	OPEN  shift 10
	.  error

	expression  goto 17
	or_expression  goto 3
	and_expression  goto 4
	comparison_expression  goto 5
	value_expression  goto 6

state 11
	or_expression:  or_expression OR.and_expression 

	ID  shift 7
	NUMBER  shift 8
	STRING  shift 9
	OPEN  shift 10
	.  error

	and_expression  goto 18
	comparison_expression  goto 5
	value_expression  goto 6

state 12
	and_expression:  and_expression AND.comparison_expression 

	ID  shift 7
	NUMBER  shift 8
	STRING  shift 9
	OPEN  shift 10
	.  error

	comparison_expression  goto 19
	value_expression  goto 6

state 13
	comparison_expression:  comparison_expression NOT_EQUAL.value_expression 

	ID  shift 7
	NUMBER  shift 8
	STRING  shift 9
	OPEN  shift 10
	.  error

	value_expression  goto 20

state 14
	comparison_expression:  comparison_expression EQUAL.value_expression 

	ID  shift 7
	NUMBER  shift 8
	STRING  shift 9
	OPEN  shift 10
	.  error

	value_expression  goto 21

state 15
	value_expression:  value_expression DOT.ID 

	ID  shift 22
	.  error


state 16
	value_expression:  ID OPEN.expression_list CLOSE 
	value_expression:  ID OPEN.CLOSE 

	ID  shift 7
	NUMBER  shift 8
	STRING  shift 9
	OPEN  shift 10
	CLOSE  shift 24
	.  error

	expression  goto 25
	or_expression  goto 3
	and_expression  goto 4
	comparison_expression  goto 5
	value_expression  goto 6
	expression_list  goto 23

state 17
	value_expression:  OPEN expression.CLOSE 

	CLOSE  shift 26
	.  error


state 18
	or_expression:  or_expression OR and_expression.    (5)
	and_expression:  and_expression.AND comparison_expression 

	AND  shift 12
	.  reduce 5 (src line 35)


state 19
	and_expression:  and_expression AND comparison_expression.    (7)
	comparison_expression:  comparison_expression.NOT_EQUAL value_expression 
	comparison_expression:  comparison_expression.EQUAL value_expression 

	EQUAL  shift 14
	NOT_EQUAL  shift 13
	.  reduce 7 (src line 39)


state 20
	comparison_expression:  comparison_expression NOT_EQUAL value_expression.    (9)
	value_expression:  value_expression.DOT ID 

	DOT  shift 15
	.  reduce 9 (src line 43)


state 21
	comparison_expression:  comparison_expression EQUAL value_expression.    (10)
	value_expression:  value_expression.DOT ID 

	DOT  shift 15
	.  reduce 10 (src line 45)


state 22
	value_expression:  value_expression DOT ID.    (16)

	.  reduce 16 (src line 53)


state 23
	expression_list:  expression_list.SEPARATOR expression 
	value_expression:  ID OPEN expression_list.CLOSE 

	CLOSE  shift 28
	SEPARATOR  shift 27
	.  error


state 24
	value_expression:  ID OPEN CLOSE.    (18)

	.  reduce 18 (src line 55)


state 25
	expression_list:  expression.    (3)

	.  reduce 3 (src line 31)


state 26
	value_expression:  OPEN expression CLOSE.    (15)

	.  reduce 15 (src line 52)


state 27
	expression_list:  expression_list SEPARATOR.expression 

	ID  shift 7
	NUMBER  shift 8
	STRING  shift 9
	OPEN  shift 10
	.  error

	expression  goto 29
	or_expression  goto 3
	and_expression  goto 4
	comparison_expression  goto 5
	value_expression  goto 6

state 28
	value_expression:  ID OPEN expression_list CLOSE.    (17)

	.  reduce 17 (src line 54)


state 29
	expression_list:  expression_list SEPARATOR expression.    (2)

	.  reduce 2 (src line 29)


14 terminals, 8 nonterminals
19 grammar rules, 30/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
57 working sets used
memory: parser 28/240000
24 extra closures
48 shift entries, 1 exceptions
14 goto entries
15 entries saved by goto default
Optimizer space used: output 33/240000
33 table entries, 0 zero
maximum spread: 14, maximum offset: 27
